# git-doc

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  start.sh  stop.sh  tsconfig.json  tsconfig.tsbuildinfo
docs/: FLOWCHART.md
prisma/: schema.prisma
rust-service/: Cargo.toml
rust-service/src/: git.rs  main.rs  models.rs  s3.rs  zip_creator.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analyze/: page.tsx
src/app/api/analyze/: route.ts
src/app/api/authors/: route.ts
src/app/api/commits/: route.ts
src/app/api/credentials/: route.ts
src/app/api/credentials/[id]/: route.ts
src/app/api/export/: route.ts
src/app/api/repos/: route.ts
src/app/api/repos/[id]/: route.ts
src/app/api/summarize/: route.ts
src/app/credentials/: page.tsx
src/app/credentials/new/: page.tsx
src/app/exports/: page.tsx
src/app/exports/new/: page.tsx
src/app/preview/: page.tsx
src/app/repos/: page.tsx
src/app/repos/new/: page.tsx
src/lib/: ai.ts  s3.ts
